--- a/Part 1 - Semester 2 CA-01 -2024 - 2014222.ipynb
+++ b/Part 1 - Semester 2 CA-01 -2024 - 2014222.ipynb
@@ -1997,18 +1997,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Getting the excel file as a dataset \n",
+    "# Exporting the DataFrame to an Excel file\n",
     "\n",
     "main_dataframe.to_excel('NBA Dataset CA1.xlsx', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b9bb0b11",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
