--- a/Part 1 - Semester 2 CA-01 -2024 - 2014222.ipynb
+++ b/Part 1 - Semester 2 CA-01 -2024 - 2014222.ipynb
@@ -1386,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "d15d5676",
    "metadata": {},
    "outputs": [],
@@ -1404,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "id": "876fca45",
    "metadata": {},
    "outputs": [
@@ -1413,46 +1413,46 @@
      "output_type": "stream",
      "text": [
       "Finished scraping data from the 2012-13 Regular%20Season.\n",
-      "...waiting 26.9 seconds...\n",
+      "...waiting 39.4 seconds...\n",
       "Finished scraping data from the 2012-13 Playoffs.\n",
-      "...waiting 34.5 seconds...\n",
+      "...waiting 32.0 seconds...\n",
       "Finished scraping data from the 2013-14 Regular%20Season.\n",
-      "...waiting 32.5 seconds...\n",
+      "...waiting 29.8 seconds...\n",
       "Finished scraping data from the 2013-14 Playoffs.\n",
-      "...waiting 23.7 seconds...\n",
+      "...waiting 34.9 seconds...\n",
       "Finished scraping data from the 2014-15 Regular%20Season.\n",
-      "...waiting 28.6 seconds...\n",
+      "...waiting 37.8 seconds...\n",
       "Finished scraping data from the 2014-15 Playoffs.\n",
-      "...waiting 25.7 seconds...\n",
+      "...waiting 27.2 seconds...\n",
       "Finished scraping data from the 2015-16 Regular%20Season.\n",
-      "...waiting 37.4 seconds...\n",
+      "...waiting 23.1 seconds...\n",
       "Finished scraping data from the 2015-16 Playoffs.\n",
-      "...waiting 27.5 seconds...\n",
+      "...waiting 23.9 seconds...\n",
       "Finished scraping data from the 2016-17 Regular%20Season.\n",
-      "...waiting 39.7 seconds...\n",
+      "...waiting 27.2 seconds...\n",
       "Finished scraping data from the 2016-17 Playoffs.\n",
-      "...waiting 38.6 seconds...\n",
+      "...waiting 36.7 seconds...\n",
       "Finished scraping data from the 2017-18 Regular%20Season.\n",
-      "...waiting 31.6 seconds...\n",
+      "...waiting 30.2 seconds...\n",
       "Finished scraping data from the 2017-18 Playoffs.\n",
-      "...waiting 29.7 seconds...\n",
+      "...waiting 38.0 seconds...\n",
       "Finished scraping data from the 2018-19 Regular%20Season.\n",
-      "...waiting 24.9 seconds...\n",
+      "...waiting 36.7 seconds...\n",
       "Finished scraping data from the 2018-19 Playoffs.\n",
-      "...waiting 36.9 seconds...\n",
+      "...waiting 29.9 seconds...\n",
       "Finished scraping data from the 2019-20 Regular%20Season.\n",
-      "...waiting 23.8 seconds...\n",
+      "...waiting 36.7 seconds...\n",
       "Finished scraping data from the 2019-20 Playoffs.\n",
-      "...waiting 29.7 seconds...\n",
+      "...waiting 21.8 seconds...\n",
       "Finished scraping data from the 2020-21 Regular%20Season.\n",
-      "...waiting 30.3 seconds...\n",
+      "...waiting 33.4 seconds...\n",
       "Finished scraping data from the 2020-21 Playoffs.\n",
-      "...waiting 38.9 seconds...\n",
+      "...waiting 33.6 seconds...\n",
       "Finished scraping data from the 2021-22 Regular%20Season.\n",
-      "...waiting 23.7 seconds...\n",
+      "...waiting 25.6 seconds...\n",
       "Finished scraping data from the 2021-22 Playoffs.\n",
-      "...waiting 31.9 seconds...\n",
-      "Process completed!! Total run time: 622.8 seconds\n"
+      "...waiting 20.1 seconds...\n",
+      "Congratulations! Process completed! Total run time: 623.9 seconds\n"
      ]
     }
    ],
@@ -1510,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "6359cf8e",
    "metadata": {},
    "outputs": [
@@ -1979,7 +1979,7 @@
        "[7293 rows x 30 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1992,15 +1992,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "19a25bc1",
+   "execution_count": 24,
+   "id": "c36c355e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The CSV file has been created successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exporting the DataFrame to a CSV file\n",
+    "\n",
+    "main_dataframe.to_csv('NBA Dataset CSV C1.csv', index=False)\n",
+    "\n",
+    "print('The CSV file has been created successfully.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9b0fa9a",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Exporting the DataFrame to an Excel file\n",
-    "\n",
-    "main_dataframe.to_excel('NBA Dataset CA1.xlsx', index=False)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
