--- a/Part 1 - Semester 2 CA-01 -2024 - 2014222.ipynb
+++ b/Part 1 - Semester 2 CA-01 -2024 - 2014222.ipynb
@@ -64,7 +64,14 @@
     "# I am using time to measures how long will take to  scraping the data of the NBA seasons\n",
     "# I will use a for loop\n",
     "\n",
-    "import time"
+    "import time\n",
+    "\n",
+    "\n",
+    "# Import the itertools library is because it simplifies the code by replacing nested loops\n",
+    "# with a single loop that iterates over the Cartesian product,\n",
+    "# making the code easier to read and understand.\n",
+    "\n",
+    "from itertools import product"
    ]
   },
   {
@@ -1413,99 +1420,104 @@
      "output_type": "stream",
      "text": [
       "Finished scraping data from the 2012-13 Regular%20Season.\n",
-      "...waiting 39.4 seconds...\n",
+      "...waiting 28.3 seconds...\n",
       "Finished scraping data from the 2012-13 Playoffs.\n",
-      "...waiting 32.0 seconds...\n",
+      "...waiting 33.8 seconds...\n",
       "Finished scraping data from the 2013-14 Regular%20Season.\n",
-      "...waiting 29.8 seconds...\n",
+      "...waiting 32.7 seconds...\n",
       "Finished scraping data from the 2013-14 Playoffs.\n",
-      "...waiting 34.9 seconds...\n",
+      "...waiting 22.2 seconds...\n",
       "Finished scraping data from the 2014-15 Regular%20Season.\n",
-      "...waiting 37.8 seconds...\n",
+      "...waiting 21.9 seconds...\n",
       "Finished scraping data from the 2014-15 Playoffs.\n",
-      "...waiting 27.2 seconds...\n",
+      "...waiting 39.7 seconds...\n",
       "Finished scraping data from the 2015-16 Regular%20Season.\n",
-      "...waiting 23.1 seconds...\n",
+      "...waiting 34.7 seconds...\n",
       "Finished scraping data from the 2015-16 Playoffs.\n",
-      "...waiting 23.9 seconds...\n",
-      "Finished scraping data from the 2016-17 Regular%20Season.\n",
-      "...waiting 27.2 seconds...\n",
-      "Finished scraping data from the 2016-17 Playoffs.\n",
-      "...waiting 36.7 seconds...\n",
-      "Finished scraping data from the 2017-18 Regular%20Season.\n",
-      "...waiting 30.2 seconds...\n",
-      "Finished scraping data from the 2017-18 Playoffs.\n",
-      "...waiting 38.0 seconds...\n",
-      "Finished scraping data from the 2018-19 Regular%20Season.\n",
-      "...waiting 36.7 seconds...\n",
-      "Finished scraping data from the 2018-19 Playoffs.\n",
       "...waiting 29.9 seconds...\n",
+      "Finished scraping data from the 2016-17 Regular%20Season.\n",
+      "...waiting 39.6 seconds...\n",
+      "Finished scraping data from the 2016-17 Playoffs.\n",
+      "...waiting 39.6 seconds...\n",
+      "Finished scraping data from the 2017-18 Regular%20Season.\n",
+      "...waiting 34.5 seconds...\n",
+      "Finished scraping data from the 2017-18 Playoffs.\n",
+      "...waiting 30.7 seconds...\n",
+      "Finished scraping data from the 2018-19 Regular%20Season.\n",
+      "...waiting 33.8 seconds...\n",
+      "Finished scraping data from the 2018-19 Playoffs.\n",
+      "...waiting 23.4 seconds...\n",
       "Finished scraping data from the 2019-20 Regular%20Season.\n",
-      "...waiting 36.7 seconds...\n",
+      "...waiting 39.2 seconds...\n",
       "Finished scraping data from the 2019-20 Playoffs.\n",
-      "...waiting 21.8 seconds...\n",
+      "...waiting 38.7 seconds...\n",
       "Finished scraping data from the 2020-21 Regular%20Season.\n",
-      "...waiting 33.4 seconds...\n",
+      "...waiting 20.8 seconds...\n",
       "Finished scraping data from the 2020-21 Playoffs.\n",
-      "...waiting 33.6 seconds...\n",
+      "...waiting 35.7 seconds...\n",
       "Finished scraping data from the 2021-22 Regular%20Season.\n",
-      "...waiting 25.6 seconds...\n",
+      "...waiting 25.2 seconds...\n",
       "Finished scraping data from the 2021-22 Playoffs.\n",
-      "...waiting 20.1 seconds...\n",
-      "Congratulations! Process completed! Total run time: 623.9 seconds\n"
+      "...waiting 34.7 seconds...\n",
+      "Congratulations! Process completed! Total run time: 645.2 seconds\n"
      ]
     }
    ],
    "source": [
-    "# This is going to be the foundation of the main DataFrame\n",
-    "main_dataframe = pd.DataFrame(columns = dataframe_columns)\n",
+    "# Defining dataframe_columns.\n",
     "\n",
-    "\n",
-    "# This is going to be the foundation of the main DataFrame\n",
     "dataframe_columns = ['Year','Season_type'] + dataframe_columns_short\n",
     "\n",
-    "# Creating a list to iterate through\n",
+    "# This will be the foundation of the main DataFrame\n",
     "\n",
-    "season_types=['Regular%20Season','Playoffs']\n",
-    "years=['2012-13','2013-14','2014-15','2015-16','2016-17','2017-18','2018-19','2019-20','2020-21','2021-22']\n",
+    "main_dataframe = pd.DataFrame(columns = dataframe_columns)\n",
     "\n",
+    "# Lists to iterate through\n",
     "\n",
-    "# Creating the for loop\n",
+    "season_types = ['Regular%20Season', 'Playoffs']\n",
+    "\n",
+    "years = ['2012-13', '2013-14', '2014-15', '2015-16', '2016-17', '2017-18', '2018-19', '2019-20', '2020-21', '2021-22']\n",
+    "\n",
+    "# Creating the for loop with itertools.product for combinations of years and season_types\n",
+    "# The reason why I am using the itertools lubrary is because it simplifies the code by replacing\n",
+    "# nested loops with a single loop that iterates over the Cartesian product,\n",
+    "# making the code easier to read and understand.\n",
+    "\n",
+    "# Also, it makes it easy to add more dimensions.\n",
+    "# For example, if I want to scrape data for more variables (e.g., adding teams to season_types and years),\n",
+    "# I can simply add the new list to the product call without changing the loop structure.\n",
     "\n",
     "start_loop = time.time()\n",
     "\n",
-    "for y in years:\n",
-    "    for s in season_types:\n",
-    "        \n",
-    "        # defining the NBA url API\n",
-    "        nba_api_url='https://stats.nba.com/stats/leagueLeaders?LeagueID=00&PerMode=Totals&Scope=S&Season='+y+'&SeasonType='+s+'&StatCategory=PTS'\n",
-    "        \n",
-    "        # Pulling out the json\n",
-    "        request = requests.get(url=nba_api_url).json()\n",
-    "        \n",
-    "        foundation_dataframe1=pd.DataFrame(request['resultSet']['rowSet'], columns=dataframe_columns_short)\n",
-    "        \n",
-    "        foundation_dataframe2=pd.DataFrame({'Year':[y for i in range(len(foundation_dataframe1))],\n",
-    "                                 'Season_type':[s for i in range(len(foundation_dataframe1))]})\n",
-    "        \n",
-    "        foundation_dataframe3=pd.concat([foundation_dataframe2, foundation_dataframe1], axis=1)\n",
-    "        \n",
-    "        main_dataframe=pd.concat([main_dataframe, foundation_dataframe3], axis=0)\n",
-    "        \n",
-    "        print(f'Finished scraping data from the {y} {s}.')\n",
-    "        \n",
-    "        # To prevent that NBA website can be block the access for scraping data\n",
-    "        # I am adding a lag time with the time package so they don't think I am a bot\n",
-    "        \n",
-    "        lag=np.random.uniform(low=20, high=40)\n",
-    "        \n",
-    "         # Print to inform the time in seconds\n",
-    "        print(f'...waiting {round(lag,1)} seconds...')\n",
-    "        \n",
-    "        time.sleep(lag)\n",
-    "        \n",
-    "# Print final message  \n",
-    "print(f'Congratulations! Process completed! Total run time: {round(time.time()-start_loop,1)} seconds')"
+    "for y, s in product(years, season_types):\n",
+    "    \n",
+    "    # Defining the NBA url API\n",
+    "    nba_api_url = f'https://stats.nba.com/stats/leagueLeaders?LeagueID=00&PerMode=Totals&Scope=S&Season={y}&SeasonType={s}&StatCategory=PTS'\n",
+    "    \n",
+    "    # Pulling out the json\n",
+    "    request = requests.get(url=nba_api_url).json()\n",
+    "    \n",
+    "    foundation_dataframe1 = pd.DataFrame(request['resultSet']['rowSet'], columns=dataframe_columns_short)\n",
+    "    \n",
+    "    foundation_dataframe2 = pd.DataFrame({'Year': [y for _ in range(len(foundation_dataframe1))],\n",
+    "                                           'Season_type': [s for _ in range(len(foundation_dataframe1))]})\n",
+    "    \n",
+    "    foundation_dataframe3 = pd.concat([foundation_dataframe2, foundation_dataframe1], axis=1)\n",
+    "    \n",
+    "    main_dataframe = pd.concat([main_dataframe, foundation_dataframe3], axis=0)\n",
+    "    \n",
+    "    print(f'Finished scraping data from the {y} {s}.')\n",
+    "    \n",
+    "    # To prevent the NBA website from blocking access for scraping data, adding a lag time\n",
+    "    # I am adding a lag time with the time package so the NBA website don't think I am a bot\n",
+    "    \n",
+    "    lag = np.random.uniform(low=20, high=40)\n",
+    "    print(f'...waiting {round(lag,1)} seconds...')\n",
+    "    time.sleep(lag)\n",
+    "\n",
+    "# Print final message\n",
+    "\n",
+    "print(f'Congratulations! Process completed! Total run time: {round(time.time() - start_loop,1)} seconds')\n"
    ]
   },
   {
@@ -1992,8 +2004,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "c36c355e",
+   "execution_count": 18,
+   "id": "13e3b5a1",
    "metadata": {},
    "outputs": [
     {
@@ -2015,7 +2027,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9b0fa9a",
+   "id": "5d1a5f76",
    "metadata": {},
    "outputs": [],
    "source": []
