Create, read, update, and delete the Python code.

--- a/Part 1 - Semester 2 CA-01 -2024 - 2014222.ipynb
+++ b/Part 1 - Semester 2 CA-01 -2024 - 2014222.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4ed0f0bb",
    "metadata": {},
    "outputs": [],
@@ -2025,9 +2025,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f2c07fdd",
+   "metadata": {},
+   "source": [
+    "# will continue in PART 2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d1a5f76",
+   "id": "c48fc16e",
    "metadata": {},
    "outputs": [],
    "source": []
