Create, read, update, and delete the Python code.

--- a/Part 2 - Semester 2 CA-01 -2024 - 2014222.ipynb
+++ b/Part 2 - Semester 2 CA-01 -2024 - 2014222.ipynb
@@ -10,6 +10,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "00dc3424",
+   "metadata": {},
+   "source": [
+    "### Github account"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80bfee65",
+   "metadata": {},
+   "source": [
+    "https://github.com/2014222-student-cct-ie/2024--Semester-2--CA1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b07b6ecd",
    "metadata": {},
    "source": [
@@ -4773,13 +4789,7 @@
       "\u001b[1m165/165\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 278us/step - loss: 26.3377 - val_loss: 33.0237\n",
       "Epoch 64/100\n",
       "\u001b[1m165/165\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 279us/step - loss: 36.0689 - val_loss: 19.0960\n",
-      "Epoch 65/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 65/100\n",
       "\u001b[1m165/165\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 285us/step - loss: 20.9696 - val_loss: 21.5795\n",
       "Epoch 66/100\n",
       "\u001b[1m165/165\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 292us/step - loss: 20.1526 - val_loss: 17.8255\n",
