--- a/Part 3 - Semester 2 CA-01 -2024 - 2014222.ipynb
+++ b/Part 3 - Semester 2 CA-01 -2024 - 2014222.ipynb
@@ -10,6 +10,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9af91460",
+   "metadata": {},
+   "source": [
+    "### Github account"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aeb8afde",
+   "metadata": {},
+   "source": [
+    "https://github.com/2014222-student-cct-ie/2024--Semester-2--CA1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "aecab06a",
    "metadata": {},
    "source": [
