--- a/Part 1 - Semester 2 CA-01 -2024 - 2014222.ipynb
+++ b/Part 1 - Semester 2 CA-01 -2024 - 2014222.ipynb
@@ -10,6 +10,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a322513c",
+   "metadata": {},
+   "source": [
+    "### Github account"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f3cfe2d",
+   "metadata": {},
+   "source": [
+    "https://github.com/2014222-student-cct-ie/2024--Semester-2--CA1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "533dea9e",
    "metadata": {},
    "source": [
